<resources>
    <string name="check_successful">验证成功</string>
    <string name="check_failed">验证失败</string>
    <string name="network_error">网络已断开，请检查网络</string>
    <string name="finger_right">请正确放置手指</string>
    <string name="initialization_successful">初始化成功</string>
    <string name="mTts_stating_error">初始化失败,错误码：</string>
    <string name="move_finger">请移开手指</string>
    <string name="successful_open">验证成功,门已开</string>
    <string name="syn_data">数据同步成功</string>
    <string name="notice_stating">通知栏下载中</string>
    <string name="isuser">占用</string>
    <string name="isfree">空闲</string>
    <string name="down_cabinet">下载柜号列表成功</string>
    <string name="provisional_open">临时开柜</string>
    <string name="eposit_open">寄存物品</string>
    <string name="remove_open">退柜离场</string>
    <string name="open_1">您的</string>
    <string name="open_2">号柜门已打开</string>
    <string name="remove_leave">号已退柜，请您带走所有随身物品并关好柜门</string>
    <string name="chang_pwd">修改密码</string>
    <string name="put_new_pwd">请输入新密码</string>
    <string name="put_pwd">请输入密码</string>
    <string name="cabinet_all">全部</string>
    <string name="cabinet_isuser">已用</string>
    <string name="cabinet_leave">剩余</string>
    <string name="cabinet_clear">清除柜号</string>
    <string name="successful">成功</string>
    <string name="failed">失败</string>
    <string name="clear_failed">清除柜号失败,柜号不存在</string>
    <string name="clearall_successful">清除所有柜号成功</string>
    <string name="manager">管理员</string>
    <string name="manager_open">管理员开柜</string>
    <string name="manager_clear">管理员清柜</string>
    <string name="open_all">打开所有</string>
    <string name="error_password">密码输入错误</string>
    <string name="same_pwd">"密码不能跟上一次相同"</string>
    <string name="chang_pwd_successful">密码修改成功</string>
    <string name="clear_all">清除所有</string>
    <string name="back">返回</string>
    <string name="put_finger_right">请按图提示操作</string>
    <string name="cabinet_number">您的柜子号码是</string>
    <string name="cabinet_put_out">您的储物柜已打开请核对柜号存取物品</string>
    <string name="clear_cabinet">清柜</string>
    <string name="open_cabinet">打开柜子</string>
    <string name="user_record">使用记录</string>
    <string name="locker_plate">查看锁板信息</string>
    <string name="test">调试区：</string>
    <string name="back_home">返回主界面</string>
    <string name="plate_number">锁板号:</string>
    <string name="lock_number">锁号：</string>
    <string name="open_lock">打开锁</string>
    <string name="deviceId">设备id:</string>
    <string name="leave_open">取件退柜</string>
    <string name="sysn_data_img">请稍后...正在同步数据中</string>
    <string name="sure_exite">确定退出?</string>
    <string name="name">姓名</string>
    <string name="number">号码</string>
    <string name="cabinet_num">柜号</string>
    <string name="open_name">打开方式</string>
    <string name="open_time">打开时间</string>
    <string name="route_no">线路号</string>
    <string name="stating">状态</string>
    <string name="plate_num">锁板号</string>

    <string name="app_name">储物柜</string>
    <string name="deviceID">请输入设备ID：</string>
    <string name="deviceCode">请输入设备密码：</string>
    <string name="login">登录</string>
    <string name="confirm">确定</string>
    <string name="cancle">取消</string>
    <string name="loading">请稍后&#8230;</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="app_id">5b3d9df5</string>
    <string name="register_template_tip">请按图示放置手指</string>
    <string name="verify_template_tip">正在验证，请稍后</string>
    <string name="match_template_tip">请再次放置同一根手指</string>
    <string name="moving_finger_tip">请移开手指</string>
    <string name="sign_success">签到成功</string>
    <string name="cose_success">本次消费: </string>
    <string name="balance_after">余额: </string>

    <string name="hint_phone_11">11位手机号码</string>
    <string name="hint_verify_coded">输入验证码</string>
    <string name="hint_phone_4">手机号码后四位</string>
    <string name="hint_verify_code">短信验证码</string>
    <string name="hint_cost">消费金额</string>
    <string name="hint_remark">添加商品备注</string>

    <string name="error_invalid_phone_empty">请输入电话号码</string>
    <string name="error_invalid_phone_4">请输入电话号码后四位</string>
    <string name="error_invalid_mobile_phone">手机号码格式有误，请确认</string>
    <string name="error_invalid_verify_code_empty">请输入验证码</string>
    <string name="error_wrong_sms_code">验证码错误！请重新输入。</string>
    <string name="error_invalid_deviceid_empty">请输入终端编号</string>
    <string name="error_invalid_devicecode_empty">请输入终端密码</string>
    <string name="error_invalid_cost_empty">请输入消费金额</string>
    <string name="error_invalid_remark_empty">请输入消费金额</string>
    <string name="error_invalid_devicecode">终端密码不正确，请联系管理员</string>
    <string name="error_failure_register_template">采集指静脉错误\n请重新采集</string>
    <string name="error_failure_match_template">验证指静脉错误\n请放同一根手指</string>
    <string name="error_failure_missing_finger">未检测到手指\n操作超时</string>
    <string name="error_failure_moving_finger">未移开手指\n操作超时</string>
    <string name="error_internal_server">服务器异常</string>
    <string name="error_network_diable">网络异常（http）</string>
    <string name="error_response_parse">解析服务器返回数据错误</string>
    <string name="error_unkown">未捕获的异常</string>
    <string name="error_socket_diable">网络异常（socket）</string>
    <string name="digitKeyppad_ok">确定</string>
    <string name="digitKeyppad_delect">退格</string>
    <string name="digitKeyppad_zero">0</string>
    <string name="digitKeyppad_nine">9</string>
    <string name="digitKeyppad_eight">8</string>
    <string name="digitKeyppad_seven">7</string>
    <string name="digitKeyppad_six">6</string>
    <string name="digitKeyppad_five">5</string>
    <string name="digitKeyppad_four">4</string>
    <string name="digitKeyppad_three">3</string>
    <string name="digitKeyppad_two">2</string>
    <string name="digitKeyppad_one">1</string>
    <string name="copyright_str">  v2.1.1   </string>
    <string name="leave">取件退柜</string>
    <string name="temp">临时取件</string>
    <string name="put_in">寄存物品</string>
</resources>
