<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/route_no"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_20sp"
            android:gravity="center"
            android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_20sp"
            android:text="@string/plate_num"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cabinet_num"
            android:textSize="@dimen/text_size_20sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stating"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_20sp"
            android:gravity="center"
            android:layout_weight="1" />
    </LinearLayout>
    <ListView
        android:id="@+id/lock_message"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
    </ListView>

</LinearLayout>